<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_app"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/toolbar_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size24"
        android:layout_marginHorizontal="@dimen/size20"
        >

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="@dimen/size40"
            android:layout_height="@dimen/size40"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:padding="@dimen/size8"
            android:background="@drawable/bg_main_stroke_gray_round20"
            />

        <TextView
            android:text="@string/txt_manual_clean"
            style="@style/TextView_Headline1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size16"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/size200"
        android:layout_height="@dimen/size200"
        app:cardCornerRadius="@dimen/size100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size48"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_manual_clean"/>

        <TextView
            android:id="@+id/tvHZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="0%"
            android:textColor="@color/white"
            android:textSize="@dimen/size25" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20">
        <LinearLayout
            android:id="@+id/lnBtnFontEar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size44"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/size20"
            >

            <TextView
                android:id="@+id/tvFront"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_front"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/bg_main_stroke_gray_round20"
                android:layout_marginRight="@dimen/size10"
                />

            <TextView
                android:id="@+id/tvEar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_ear"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/bg_main_stroke_gray_round20"
                android:layout_marginLeft="@dimen/size10"
                android:alpha="0.3"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_manual_clean_message"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/size20"
            android:textSize="@dimen/size14"
            android:visibility="gone"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_frequency"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/size16"
        android:layout_marginLeft="@dimen/size40"
        android:layout_marginTop="@dimen/size30"
        />

    <SeekBar
        android:id="@+id/sbVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size30"
        android:progress="50"
        android:layout_marginTop="@dimen/size5"
        android:progressBackgroundTint="@color/white"
        android:thumbTint="@color/white"
        android:progressTint="@color/white"
        />

    <RelativeLayout
        android:layout_width="@dimen/size60"
        android:layout_height="@dimen/size60"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size20"
        >
        <ImageView
            android:id="@+id/imvPlay"
            android:layout_width="@dimen/size60"
            android:layout_height="@dimen/size60"
            android:src="@drawable/ic_play"
            android:background="@drawable/bg_main_stroke_gray_round30"
            android:padding="@dimen/size15"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AD"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:background="#FFEB3B"
            android:paddingHorizontal="@dimen/size3"
            android:textSize="@dimen/size10"
            />
    </RelativeLayout>
</LinearLayout>
