<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_app"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/toolbar_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size24"
        android:layout_marginHorizontal="@dimen/size20"
        >

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="@dimen/size40"
            android:layout_height="@dimen/size40"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:padding="@dimen/size8"
            android:background="@drawable/bg_main_stroke_gray_round20"
            />

        <TextView
            android:text="@string/txt_auto_clean"
            style="@style/TextView_Headline1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size16"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/size200"
        android:layout_height="@dimen/size200"
        android:layout_marginTop="@dimen/size48"
        android:layout_gravity="center_horizontal"
        >

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/arcView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progress="50"
            app:indicatorSize="@dimen/size190"
            app:trackThickness="@dimen/size20"
            android:layout_centerInParent="true"
            app:trackColor="@color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size25"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_insize_auto_clean"
            />
        <TextView
            android:id="@+id/tvPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textSize="@dimen/size35"
            android:layout_gravity="center"
            android:textColor="@color/app_main"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imvPlay"
        android:layout_width="@dimen/size60"
        android:layout_height="@dimen/size60"
        android:src="@drawable/ic_play"
        android:background="@drawable/bg_main_stroke_gray_round30"
        android:padding="@dimen/size15"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size20"
        />

    <LinearLayout
        android:id="@+id/lnBtnFrontEar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size44"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/size20"
        android:layout_marginTop="@dimen/size20"
        >

        <TextView
            android:id="@+id/tvFront"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_front"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/bg_main_stroke_gray_round20"
            android:layout_marginRight="@dimen/size10"
            />

        <TextView
            android:id="@+id/tvEar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_ear"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/bg_main_stroke_gray_round20"
            android:layout_marginLeft="@dimen/size10"
            android:alpha="0.3"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvContAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_auto_clean_message"
        android:textColor="@color/white"
        android:textSize="@dimen/size12"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/size20"
        android:layout_marginTop="@dimen/size20"
        />
</LinearLayout>
