<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_app"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/toolbar_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size24"
        android:layout_marginHorizontal="@dimen/size20"
        >

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="@dimen/size40"
            android:layout_height="@dimen/size40"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:padding="@dimen/size8"
            android:background="@drawable/bg_main_stroke_gray_round20"
            />

        <TextView
            android:text="@string/txt_test_speaker"
            style="@style/TextView_Headline1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size16"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/size200"
        android:layout_height="@dimen/size200"
        app:cardCornerRadius="@dimen/size100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size20"
        app:cardBackgroundColor="@color/transparent"
        >

        <ImageView
            android:id="@+id/ivPlate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:src="@drawable/img_dan" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btnPlayAndPause"
        android:layout_width="@dimen/size60"
        android:layout_height="@dimen/size60"
        android:src="@drawable/ic_play"
        android:background="@drawable/bg_main_stroke_gray_round30"
        android:padding="@dimen/size15"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size30"
        />

    <TextView
        android:id="@+id/tvContTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_test_speaker_message"
        android:textColor="@color/gray2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size10"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_volume_boost"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/size16"
        android:layout_marginLeft="@dimen/size40"
        android:layout_marginTop="@dimen/size30"
        />

    <SeekBar
        android:id="@+id/sbVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size30"
        android:progress="50"
        android:layout_marginTop="@dimen/size5"
        android:progressBackgroundTint="@color/white"
        android:thumbTint="@color/white"
        android:progressTint="@color/white"
        />
</LinearLayout>
