<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_app"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/toolbar_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size24"
        android:layout_marginHorizontal="@dimen/size20"
        >

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="@dimen/size40"
            android:layout_height="@dimen/size40"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:padding="@dimen/size8"
            android:background="@drawable/bg_main_stroke_gray_round20"
            />

        <TextView
            android:text="@string/txt_vibrate"
            style="@style/TextView_Headline1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size16"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size30">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/imv_vibrate"/>
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/size150"
            android:layout_height="@dimen/size150"
            app:cardCornerRadius="@dimen/size100"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#580e97"
            android:layout_centerInParent="true"
            >

            <TextView
                android:id="@+id/tvPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textSize="@dimen/size35"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="@dimen/size60"
        android:layout_height="@dimen/size60"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size20"
        >
        <ImageView
            android:id="@+id/imvPlay"
            android:layout_width="@dimen/size60"
            android:layout_height="@dimen/size60"
            android:src="@drawable/ic_play"
            android:background="@drawable/bg_main_stroke_gray_round30"
            android:padding="@dimen/size15"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AD"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:background="#FFEB3B"
            android:paddingHorizontal="@dimen/size3"
            android:textSize="@dimen/size10"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20">
        <LinearLayout
            android:id="@+id/lnBtnFontEar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size44"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/size20"
            >

            <TextView
                android:id="@+id/tvNormal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_normal"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/bg_main_stroke_gray_round20"
                android:layout_marginRight="@dimen/size10"
                />

            <TextView
                android:id="@+id/tvStrong"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_strong"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/bg_main_stroke_gray_round20"
                android:layout_marginLeft="@dimen/size10"
                android:alpha="0.3"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_manual_clean_message"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/size20"
            android:textSize="@dimen/size14"
            android:visibility="gone"
            />
    </RelativeLayout>
</LinearLayout>
